--- a/style.css
+++ b/style.css
@@ -2,12 +2,12 @@
   text-align: center;
 }
 
-.bottom-text {
+/*.bottom-text {
   position: absolute;
   bottom: 30px;
   width: 100%;
   text-align: center;
-}
+}*/
 
 #center-button {
   display: flex;
